# templates

./: flake.nix
base/: flake.nix
go-hello/: .gitignore  README.md  Taskfile.yml  flake.nix
python/: .gitignore  README.md  Taskfile.yml  flake.nix  pyproject.toml  template.sh
python/projectname/: __main__.py
rust/: Cargo.toml  Taskfile.yml  flake.nix  rust-toolchain.toml  template.sh
rust-simple/: shell.nix
