[tool.poetry]
name = "{{projectname}}"
version = "1.0.0"
description = ""
authors = ["tonychg <tonychg@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
projectname = "{{projectname}}.__main__:main"

